nav section added

--- a/index.html
+++ b/index.html
@@ -9,6 +9,22 @@
 </head>
 
 <body>
+  <!-- navbar section starts here -->
+  <nav>
+    <div class="nav-container">
+      <div class="logo-container">
+        <img src="images/Frame.png" alt="">
+        <span class="logo_txt"><span style="color: #FF42A5;">G</span>amer</span>
+      </div>
+  
+      <div class="nav-items-container">
+        <a href="">About Us</a>
+        <a href="">Developers</a>
+        <a class="follow_us_btn" href="">Follow US On</a>
+      </div>
+    </div>
+  </nav>
+  <!-- navbar section ends here -->
   
 </body>
 </html>
