nav section responsive done, added the banner section & responsive done

--- a/index.html
+++ b/index.html
@@ -25,6 +25,55 @@
     </div>
   </nav>
   <!-- navbar section ends here -->
+
+
+
+
+
+  <!-- main section starts here -->
+  <main>
+
+    <!-- goat section starts here -->
+    <section class="goat_section">
+
+      <div class="goat_contents">
+
+        <div class="goat_txt_content">
+          <h3 class="goat_title">PLAY LIKE THE</h3>
+          <p class="goat_big_txt">G.O.A.T.</p>
+          <ul class="normal_txt">
+            <li>1-Click instant play</li>
+            <li>No Download</li>
+            <li>1000s of supported online games</li>
+          </ul>
+          <button class="btn_pink">SIGN IN</button> <button class="btn_blue">GO ROGUE</button>
+        </div>
+  
+        <div class="goat_img_content">
+          <img src="images/Group18.png" alt="">  
+        </div>
+
+      </div>
+      
+    </section>
+    <!-- goat section ends here -->
+
+  </main>
+  <!-- main section ends here -->
+
+
+
+
+
+
+
+
+    <!-- footer section starts here -->
+  <footer>
+
+  </footer>
+  <!-- footer section ends here -->
+
   
 </body>
 </html>
