instant play section added & responsive finished

--- a/index.html
+++ b/index.html
@@ -91,6 +91,22 @@
     </section>
     <!-- funny video section ends here -->
 
+    <!-- play instant section starts here -->
+    <section class="play_instant_section">
+
+      <div class="play_instant_txt">        
+        <p class="black_heading_txt" style="text-align: center; width: 50%; margin: auto;"><span class="color_heading_txt">Play Instantly,</span><br>No Downloads No Installs.</p>
+        <p class="mini_txt" style="text-align: center; width: 50%; margin: auto;">Play games online for free without downloading. Just click the Play button and play instantly in your browser.</p>        
+      </div>
+
+      <div class="play_instant_img">
+        <img class="big_img" src="images/Rectangle55.png" alt="">
+        <img class="small_img" src="images/Rectangle66.png" alt="">
+      </div>
+
+    </section>
+    <!-- play instant section ends here -->
+
   </main>
   <!-- main section ends here -->
 
