Games section added & responsive finished

--- a/index.html
+++ b/index.html
@@ -107,6 +107,55 @@
     </section>
     <!-- play instant section ends here -->
 
+
+    <!-- games section starts here -->
+    <section class="game_section">
+
+      <div class="all_games">
+
+        <div class="game">
+          <img src="images/Rectangle11.png" alt=""> <span>Action Games</span>
+        </div>
+
+        <div class="game">
+          <img src="images/Rectangle12.png" alt=""> <span>Adventures Games</span>
+        </div>
+
+        <div class="game">
+          <img src="images/Rectangle13.png" alt=""> <span>Arcade Games</span>
+        </div>
+
+        <div class="game">
+          <img src="images/Rectangle14.png" alt=""> <span>Educational Games</span>
+        </div>
+
+        <div class="game">
+          <img src="images/Rectangle15.png" alt=""> <span>Word Games</span>
+        </div>
+                        
+      </div>
+
+      <div class="all_games2">
+        <div class="game">
+          <img src="images/Rectangle16.png" alt=""> <span>Role Playing Games</span>
+        </div>
+
+        <div class="game">
+          <img src="images/Rectangle17.png" alt=""> <span>Music & Audio Games</span>
+        </div>
+
+        <div class="game">
+          <img src="images/Rectangle18.png" alt=""> <span>Puzzle Games</span>
+        </div>
+
+        <div class="game">
+          <img src="images/Rectangle19.png" alt=""> <span>Strategy Games</span>
+        </div>
+      </div>
+
+    </section>
+    <!-- games section ends here -->
+
   </main>
   <!-- main section ends here -->
 
